update, feature & fix: anchor tag issue fix, catch fragment, fragment version, unique fragment fix

--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title></title>
+  <title>Fragmenium</title>
+  <link rel="preload" href="/mini.engine.js">
+  <link rel="preload" href="/style.css">
+  <script src="/mini.engine.js"></script>
+  <link rel="stylesheet" href="/style.css">
 </head>
 <body>
   
